Fix warnings, mobile screen alignment and gallery scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -146,10 +146,14 @@ body {
 
 .base-screen {
   display: flex;
-  height: 78dvh;
+  height: 100dvh;
   width: 100dvw;
   justify-content: center;
   align-items: center;
+
+  @media screen and (max-width: 600px) {
+
+  }
 }
 
 .bg {
